src/test/ui/macros/rfc-3086-metavar-expr/syntax-errors.stderr
error: could not find an expected `ident` element
  --> $DIR/syntax-errors.rs:17:33
   |
LL |     ( $( $i:ident ),* ) => { ${ count($i) } };
   |                                 ^^^^^ - help: Try removing `$`

error: could not find an expected `ident` element
  --> $DIR/syntax-errors.rs:23:26
   |
LL |     ( $i:ident ) => { ${ count($i) } };
   |                          ^^^^^ - help: Try removing `$`

error: `count` can not be placed inside the inner-most repetition
  --> $DIR/syntax-errors.rs:12:24
   |
LL |     ( $i:ident ) => { ${ count(i) } };
   |                        ^^^^^^^^^^^^

error: expected expression, found `$`
  --> $DIR/syntax-errors.rs:17:30
   |
LL |     ( $( $i:ident ),* ) => { ${ count($i) } };
   |                              ^ expected expression
...
LL |     curly__rhs_dollar__round!(a, b, c);
   |     ---------------------------------- in this macro invocation
   |
   = note: this error originates in the macro `curly__rhs_dollar__round` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected expression, found `$`
  --> $DIR/syntax-errors.rs:23:23
   |
LL |     ( $i:ident ) => { ${ count($i) } };
   |                       ^ expected expression
...
LL |     curly__rhs_dollar__no_round!(a);
   |     ------------------------------- in this macro invocation
   |
   = note: this error originates in the macro `curly__rhs_dollar__no_round` (in Nightly builds, run with -Z macro-backtrace for more info)

error: variable 'i' is still repeating at this depth
  --> $DIR/syntax-errors.rs:41:36
   |
LL |     ( $( $i:ident ),* ) => { count($i) };
   |                                    ^^

error[E0425]: cannot find function `count` in this scope
  --> $DIR/syntax-errors.rs:29:30
   |
LL |     ( $( $i:ident ),* ) => { count(i) };
   |                              ^^^^^ not found in this scope
...
LL |     no_curly__no_rhs_dollar__round!(a, b, c);
   |     ---------------------------------------- in this macro invocation
   |
   = note: this error originates in the macro `no_curly__no_rhs_dollar__round` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0425]: cannot find value `i` in this scope
  --> $DIR/syntax-errors.rs:29:36
   |
LL |     ( $( $i:ident ),* ) => { count(i) };
   |                                    ^ not found in this scope
...
LL |     no_curly__no_rhs_dollar__round!(a, b, c);
   |     ---------------------------------------- in this macro invocation
   |
   = note: this error originates in the macro `no_curly__no_rhs_dollar__round` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0425]: cannot find function `count` in this scope
  --> $DIR/syntax-errors.rs:35:23
   |
LL |     ( $i:ident ) => { count(i) };
   |                       ^^^^^ not found in this scope
...
LL |     no_curly__no_rhs_dollar__no_round!(a);
   |     ------------------------------------- in this macro invocation
   |
   = note: this error originates in the macro `no_curly__no_rhs_dollar__no_round` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0425]: cannot find value `i` in this scope
  --> $DIR/syntax-errors.rs:35:29
   |
LL |     ( $i:ident ) => { count(i) };
   |                             ^ not found in this scope
...
LL |     no_curly__no_rhs_dollar__no_round!(a);
   |     ------------------------------------- in this macro invocation
   |
   = note: this error originates in the macro `no_curly__no_rhs_dollar__no_round` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0425]: cannot find function `count` in this scope
  --> $DIR/syntax-errors.rs:46:23
   |
LL |     ( $i:ident ) => { count($i) };
   |                       ^^^^^ not found in this scope
...
LL |     no_curly__rhs_dollar__no_round!(a);
   |     ---------------------------------- in this macro invocation
   |
   = note: this error originates in the macro `no_curly__rhs_dollar__no_round` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0425]: cannot find value `a` in this scope
  --> $DIR/syntax-errors.rs:58:37
   |
LL |     no_curly__rhs_dollar__no_round!(a);
   |                                     ^ not found in this scope

error: aborting due to 12 previous errors

For more information about this error, try `rustc --explain E0425`.
